force-app/main/default/objects/QuoteLineItem/fields/Freight_Commodity__c.field-meta.xml
<CustomField>
    <fullName>Freight_Commodity__c</fullName>
    <description>Freight - to capture the commodity of the Opportunity</description>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abalone</fullName>
            </value>
            <value>
                <fullName>Aircraft Engines</fullName>
            </value>
            <value>
                <fullName>Aircraft On Ground</fullName>
            </value>
            <value>
                <fullName>Asparagus</fullName>
            </value>
            <value>
                <fullName>Avocados</fullName>
            </value>
            <value>
                <fullName>Baby Poultry</fullName>
            </value>
            <value>
                <fullName>Books/Brochures</fullName>
            </value>
            <value>
                <fullName>Brocolli</fullName>
            </value>
            <value>
                <fullName>Bulk Utilisation, Shipper Consignee Handled Unit</fullName>
            </value>
            <value>
                <fullName>Cheese</fullName>
            </value>
            <value>
                <fullName>Company Materials</fullName>
            </value>
            <value>
                <fullName>Corrosive</fullName>
            </value>
            <value>
                <fullName>Courier Bag Voucher</fullName>
            </value>
            <value>
                <fullName>Crabs</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Deferred Cargo</fullName>
            </value>
            <value>
                <fullName>Density Shipments</fullName>
            </value>
            <value>
                <fullName>Diplomatic Mail</fullName>
            </value>
            <value>
                <fullName>Dry Ice</fullName>
            </value>
            <value>
                <fullName>Eel</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Fish/Seafood</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>Flowers/Plants</fullName>
            </value>
            <value>
                <fullName>Foodstuffs</fullName>
            </value>
            <value>
                <fullName>Fruit And Vegetables</fullName>
            </value>
            <value>
                <fullName>General Commodity</fullName>
            </value>
            <value>
                <fullName>Hatching Eggs</fullName>
            </value>
            <value>
                <fullName>Heavy Cargo,150Kg And Over Per Piece</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>