force-app/main/default/objects/QuoteLineItem/fields/Freight_Commodity_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Commodity_Type__c</fullName>
    <description>Freight - to capture the commodity from Opportunity Product.</description>
    <label>Commodity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVI</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
            </value>
            <value>
                <fullName>General Cargo</fullName>
            </value>
            <value>
                <fullName>Oversized</fullName>
            </value>
            <value>
                <fullName>Perishable</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>