force-app/main/default/objects/QuoteLineItem/fields/Freight_Destination__c.field-meta.xml
<CustomField>
    <fullName>Freight_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Freight Implementation: It will be the destination for the products replication.</description>
    <label>Destination</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Quote Line Items (Destination)</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>