force-app/main/default/objects/QuoteLineItem/fields/Freight_Origin__c.field-meta.xml
<CustomField>
    <fullName>Freight_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Freight Implementation: It will be a start destination of underlying product replication.</description>
    <label>Origin</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Quote Line Items (Origin)</relationshipLabel>
    <relationshipName>Quote_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>