force-app/main/default/objects/QuoteLineItem/fields/Freight_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Unit_Type__c</fullName>
    <description>Freight Implementation: It will be dependent on Rate Type field.</description>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AKE</fullName>
            </value>
            <value>
                <fullName>AKH</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>AAP</fullName>
            </value>
            <value>
                <fullName>AAX</fullName>
            </value>
            <value>
                <fullName>DQF</fullName>
            </value>
            <value>
                <fullName>PMC</fullName>
            </value>
            <value>
                <fullName>PAG</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>AAF</fullName>
            </value>
            <value>
                <fullName>AAU</fullName>
            </value>
            <value>
                <fullName>ALF</fullName>
            </value>
            <value>
                <fullName>AMF</fullName>
            </value>
            <value>
                <fullName>PLA</fullName>
            </value>
            <value>
                <fullName>PKC</fullName>
            </value>
            <value>
                <fullName>FQA</fullName>
            </value>
            <value>
                <fullName>AAK</fullName>
            </value>
            <value>
                <fullName>AAY</fullName>
            </value>
            <value>
                <fullName>ABB</fullName>
            </value>
            <value>
                <fullName>AEP</fullName>
            </value>
            <value>
                <fullName>PEB</fullName>
            </value>
            <value>
                <fullName>PGA</fullName>
            </value>
            <value>
                <fullName>PRA</fullName>
            </value>
            <value>
                <fullName>RAP</fullName>
            </value>
            <value>
                <fullName>RKN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>