force-app/main/default/objects/QuoteLineItem/fields/Freight_Weight_Break_KGs__c.field-meta.xml
<CustomField>
    <fullName>Freight_Weight_Break_KGs__c</fullName>
    <description>Freight Implementation: It is categorize the product based on the weight.</description>
    <label>Weight Break (KGs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>-45</fullName>
            </value>
            <value>
                <fullName>+45</fullName>
            </value>
            <value>
                <fullName>+100</fullName>
            </value>
            <value>
                <fullName>+250</fullName>
            </value>
            <value>
                <fullName>+500</fullName>
            </value>
            <value>
                <fullName>+1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>