force-app/main/default/objects/QuoteLineItem/fields/Min_Charge__c.field-meta.xml
<CustomField>
    <fullName>Min_Charge__c</fullName>
    <label>Min Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>