force-app/main/default/objects/QuoteLineItem/fields/Pivot_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Pivot_Weight_Kgs__c</fullName>
    <label>Pivot Weight (Kgs)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>